new two logos added in home page

--- a/index.html
+++ b/index.html
@@ -2328,12 +2328,15 @@ document.getElementById("prevBtn").onclick = () => {
     <img src="images/vindus_clients_images/esteemed7.jpeg" alt="Esteemed Client 7" class="logo">
     <img src="images/vindus_clients_images/esteemed8.jpeg" alt="Esteemed Client 8" class="logo">
     <img src="images/vindus_clients_images/esteemed9.jpeg" alt="Esteemed Client 9" class="logo">
+    <img src="images/vindus_clients_images/esteemed16.jpg" alt="Esteemed Client 9" class="logo">
+    <img src="images/vindus_clients_images/esteemed15.jpg" alt="Esteemed Client 9" class="logo">
     <img src="images/vindus_clients_images/esteemed10.jpeg" alt="Esteemed Client 10" class="logo">
     <img src="images/vindus_clients_images/esteemed11.jpeg" alt="Esteemed Client 11" class="logo">
     <img src="images/vindus_clients_images/esteemed12.jpeg" alt="Esteemed Client 12" class="logo">
     <img src="images/vindus_clients_images/esteemed13.jpeg" alt="Esteemed Client 13" class="logo">
     <img src="images/vindus_clients_images/esteemed14.jpeg" alt="Esteemed Client 14" class="logo">
- <img src="images/vindus_clients_images/esteemed1.jpeg" alt="Esteemed Client 1" class="logo">
+
+    <img src="images/vindus_clients_images/esteemed1.jpeg" alt="Esteemed Client 1" class="logo">
     <img src="images/vindus_clients_images/esteemed2.jpeg" alt="Esteemed Client 2" class="logo">
     <img src="images/vindus_clients_images/esteemed3.jpeg" alt="Esteemed Client 3" class="logo">
     <img src="images/vindus_clients_images/esteemed4.jpeg" alt="Esteemed Client 4" class="logo">
@@ -2342,12 +2345,15 @@ document.getElementById("prevBtn").onclick = () => {
     <img src="images/vindus_clients_images/esteemed7.jpeg" alt="Esteemed Client 7" class="logo">
     <img src="images/vindus_clients_images/esteemed8.jpeg" alt="Esteemed Client 8" class="logo">
     <img src="images/vindus_clients_images/esteemed9.jpeg" alt="Esteemed Client 9" class="logo">
+     <img src="images/vindus_clients_images/esteemed16.jpg" alt="Esteemed Client 9" class="logo">
+    <img src="images/vindus_clients_images/esteemed15.jpg" alt="Esteemed Client 9" class="logo">
     <img src="images/vindus_clients_images/esteemed10.jpeg" alt="Esteemed Client 10" class="logo">
     <img src="images/vindus_clients_images/esteemed11.jpeg" alt="Esteemed Client 11" class="logo">
     <img src="images/vindus_clients_images/esteemed12.jpeg" alt="Esteemed Client 12" class="logo">
     <img src="images/vindus_clients_images/esteemed13.jpeg" alt="Esteemed Client 13" class="logo">
     <img src="images/vindus_clients_images/esteemed14.jpeg" alt="Esteemed Client 14" class="logo">
- <img src="images/vindus_clients_images/esteemed1.jpeg" alt="Esteemed Client 1" class="logo">
+
+    <img src="images/vindus_clients_images/esteemed1.jpeg" alt="Esteemed Client 1" class="logo">
     <img src="images/vindus_clients_images/esteemed2.jpeg" alt="Esteemed Client 2" class="logo">
     <img src="images/vindus_clients_images/esteemed3.jpeg" alt="Esteemed Client 3" class="logo">
     <img src="images/vindus_clients_images/esteemed4.jpeg" alt="Esteemed Client 4" class="logo">
@@ -2356,6 +2362,8 @@ document.getElementById("prevBtn").onclick = () => {
     <img src="images/vindus_clients_images/esteemed7.jpeg" alt="Esteemed Client 7" class="logo">
     <img src="images/vindus_clients_images/esteemed8.jpeg" alt="Esteemed Client 8" class="logo">
     <img src="images/vindus_clients_images/esteemed9.jpeg" alt="Esteemed Client 9" class="logo">
+     <img src="images/vindus_clients_images/esteemed16.jpg" alt="Esteemed Client 9" class="logo">
+    <img src="images/vindus_clients_images/esteemed15.jpg" alt="Esteemed Client 9" class="logo">
     <img src="images/vindus_clients_images/esteemed10.jpeg" alt="Esteemed Client 10" class="logo">
     <img src="images/vindus_clients_images/esteemed11.jpeg" alt="Esteemed Client 11" class="logo">
     <img src="images/vindus_clients_images/esteemed12.jpeg" alt="Esteemed Client 12" class="logo">
