testmonial added in about page

--- a/about.html
+++ b/about.html
@@ -313,6 +313,197 @@ span{
         padding: 8px;  /* Adjust padding for better space efficiency */
     }
 }
+/* ===============================
+   TESTIMONIAL – FINAL LOCKED CSS
+================================ */
+
+/* CONTAINER */
+.signature-testimonial {
+  max-width: 1000px;
+  margin: 70px auto;
+  border-radius: 28px;
+  overflow: visible;
+  box-shadow: 0 40px 90px rgba(0,0,0,0.18);
+}
+
+/* HEADER */
+.signature-header {
+  background:linear-gradient(#1560bd,#000040);
+  padding: 50px 20px 90px;
+  text-align: center;
+}
+
+.signature-header h4 {
+  margin: 0;
+  font-family: cursive;
+  font-size: 22px;
+  color: #ffffff;
+}
+
+.signature-header h2 {
+  margin-top: 6px;
+  font-size: 40px;
+  color: #fff;
+  font-weight: 800;
+}
+
+/* BODY */
+.signature-body {
+  background: #ffffff;
+  padding: 160px 60px 70px;
+  text-align: center;
+  position: relative;
+}
+
+/* PROFILE */
+.signature-profile {
+  position: absolute;
+  top: -85px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  z-index: 10;
+}
+
+.profile-ring {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  background: linear-gradient(135deg, #1560bd, #3aa0ff);
+  padding: 6px;
+  margin: auto;
+}
+
+.profile-ring img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 6px solid #ffffff;
+  object-fit: cover;
+}
+
+.signature-profile h3 {
+  margin-top: 16px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #000040;
+}
+
+.profile-title {
+  font-size: 13px;
+  color: #555;
+  max-width: 360px;
+  margin: auto;
+  line-height: 1.5;
+}
+
+.signature-review {
+  position: relative;
+  max-width: 900px;
+  margin: auto;
+  padding: 75px 45px 45px;
+  border-radius: 22px;
+  background: #ffffff;
+  border: 2px solid #1560bd;
+  text-align: justify;
+
+  /* SHADOW */
+  box-shadow:
+    
+    10px 20px 6px rgba(21, 96, 189, 0.25);
+}
+
+
+/* STARS */
+.review-stars {
+  position: absolute;
+  top: -18px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #ffffff;
+  padding: 6px 20px;
+  border-radius: 30px;
+  border: 2px solid #1560bd;
+  display: flex;
+  gap: 6px;
+}
+
+.review-stars i {
+  color: #d4af37;
+  font-size: 26px;
+}
+
+/* QUOTE MARK */
+.signature-review::before {
+  content: "“";
+  position: absolute;
+  top: 24px;
+  left: 28px;
+  font-size: 64px;
+  color: rgba(21, 96, 189, 0.15);
+  font-family: serif;
+}
+
+/* TEXT */
+.signature-review p {
+  font-size: 16px;
+  line-height: 1.85;
+  color: #444;
+  margin: 0;
+}
+
+/* RESPONSIVE */
+@media (max-width: 768px) {
+  .signature-body {
+    padding: 150px 30px 50px;
+  }
+
+  .signature-review {
+    padding: 65px 26px 32px;
+  }
+
+  .signature-header h2 {
+    font-size: 32px;
+  }
+}
+@media (max-width: 768px) {
+  .signature-body {
+    padding-top: 190px;  /* more room for profile */
+    padding-bottom: 90px;
+  }
+
+  .signature-review {
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 468px) {
+  .signature-body {
+    padding-top: 220px;  /* more room for profile */
+    padding-bottom: 90px;
+  }
+
+  .signature-review {
+    margin-bottom: 40px;
+  }
+}
+.signature-review strong {
+  font-weight: 600;
+  color: #1560bd;
+}
+
+.signature-divider {
+  border: none;
+  height: 1px;
+  margin: 35px 0;
+  background: linear-gradient(
+    to right,
+    transparent,
+    #1560bd,
+    transparent
+  );
+}
+
 </style>
 	</head>
 
@@ -424,6 +615,73 @@ span{
 		<p>Sairam Engineering services India PVT Ltd, </p>
 		<p>PACE Process & Controls India PVT Ltd,  </p>
 		<p>PSV PVT Ltd.</p>
+
+<section class="signature-testimonial">
+
+  <!-- HEADER -->
+  <div class="signature-header">
+   <h4>Professional</h4>
+<h2>Testimonial</h2>
+
+  </div>
+
+  <!-- BODY -->
+  <div class="signature-body">
+
+    <!-- PROFILE -->
+    <div class="signature-profile">
+      <div class="profile-ring">
+        <img src="images/vindus_clients_images/testmonial.jpg" alt="Mr. S. Rajan">
+      </div>
+
+      <h3>Mr. S. Rajan</h3>
+      <p class="profile-title">
+        Senior HSE Leader | 30+ Years of Experience<br>
+        EPC, Manufacturing, Cement & Infrastructure Sectors
+      </p>
+    </div>
+
+  <!-- REVIEW -->
+<div class="signature-review">
+
+  <!-- STARS INSIDE BORDER -->
+  <div class="review-stars">
+    <i class="fa-solid fa-star"></i>
+    <i class="fa-solid fa-star"></i>
+    <i class="fa-solid fa-star"></i>
+    <i class="fa-solid fa-star"></i>
+    <i class="fa-solid fa-star"></i>
+  </div>
+
+ <p>
+  I have had the opportunity to closely observe and engage with Mr. Barath in his professional capacity within the field of Health, Environment, and Safety (HES) management.
+  <strong>He is a highly accomplished HES leader with over two decades of extensive field experience, demonstrating exceptional depth of knowledge, disciplined execution, and a forward-looking approach</strong>
+  across complex and high-risk project environments.
+<hr class="signature-divider">
+
+  <strong>Mr. Ghanta Barath’s leadership is defined by a highly professional and methodical approach</strong>,
+  firmly aligned with international standards and globally recognized best practices.
+  <strong>He consistently goes beyond regulatory compliance</strong>
+  by designing and implementing robust, scalable, and sustainable HES systems that strengthen organizational resilience
+  and embed a strong safety culture at all levels.
+<hr class="signature-divider">
+
+  <strong>His ability to integrate technical excellence with practical field execution, drive continuous improvement,
+  and deliver long-term value</strong>
+  makes him a trusted leader and a dependable professional.
+  <strong>Mr. Barath is not only effective in delivering results but also in building systems and cultures that endure.</strong>
+  I strongly regard him as a benchmark professional in the HES domain.
+</p>
+
+
+</div>
+
+  </div>
+
+</section>
+
+
+    
         <h3 style="color: #1560bd;">Background in developing www.mlcqehs.com:</h3><br><br>
 </div>
 <div class="row align-items-center">
