--- a/about.html
+++ b/about.html
@@ -654,7 +654,7 @@ span{
   </div>
 
  <p>
-  I have had the opportunity to closely observe and engage with Mr. Barath in his professional capacity within the field of Health, Environment, and Safety (HES) management.
+  I have had the opportunity to closely observe and engage with Mr. Ghanta Barath in his professional capacity within the field of Health, Environment, and Safety (HES) management.
   <strong>He is a highly accomplished HES leader with over two decades of extensive field experience, demonstrating exceptional depth of knowledge, disciplined execution, and a forward-looking approach</strong>
   across complex and high-risk project environments.
 <hr class="signature-divider">
@@ -669,7 +669,7 @@ span{
   <strong>His ability to integrate technical excellence with practical field execution, drive continuous improvement,
   and deliver long-term value</strong>
   makes him a trusted leader and a dependable professional.
-  <strong>Mr. Barath is not only effective in delivering results but also in building systems and cultures that endure.</strong>
+  <strong>Mr. Ghanta Barath is not only effective in delivering results but also in building systems and cultures that endure.</strong>
   I strongly regard him as a benchmark professional in the HES domain.
 </p>
 
