name changed in testimonial in about us page

--- a/about.html
+++ b/about.html
@@ -654,23 +654,23 @@ span{
   </div>
 
  <p>
-  I have had the opportunity to closely observe and engage with Mr. Ghanta Barath in his professional capacity within the field of Health, Environment, and Safety (HES) management.
-  <strong>He is a highly accomplished HES leader with over two decades of extensive field experience, demonstrating exceptional depth of knowledge, disciplined execution, and a forward-looking approach</strong>
+  I have had the opportunity to closely observe and engage with Mr. Ghanta Bharat in his professional capacity within the field of Quality, Environment, Health and Safety (QEHS) management.
+  <strong>He is a highly accomplished QEHS leader with over two decades of extensive field experience, demonstrating exceptional depth of knowledge, disciplined execution, and a forward-looking approach</strong>
   across complex and high-risk project environments.
 <hr class="signature-divider">
 
-  <strong>Mr. Ghanta Barath’s leadership is defined by a highly professional and methodical approach</strong>,
+  <strong>Mr. Ghanta Bharat’s leadership is defined by a highly professional and methodical approach</strong>,
   firmly aligned with international standards and globally recognized best practices.
   <strong>He consistently goes beyond regulatory compliance</strong>
-  by designing and implementing robust, scalable, and sustainable HES systems that strengthen organizational resilience
+  by designing and implementing robust, scalable, and sustainable QEHS systems that strengthen organizational resilience
   and embed a strong safety culture at all levels.
 <hr class="signature-divider">
 
   <strong>His ability to integrate technical excellence with practical field execution, drive continuous improvement,
   and deliver long-term value</strong>
   makes him a trusted leader and a dependable professional.
-  <strong>Mr. Ghanta Barath is not only effective in delivering results but also in building systems and cultures that endure.</strong>
-  I strongly regard him as a benchmark professional in the HES domain.
+  <strong>Mr. Ghanta Bharat is not only effective in delivering results but also in building systems and cultures that endure.</strong>
+  I strongly regard him as a benchmark professional in the QEHS domain.
 </p>
 
 
